# tap-fec-filing

./: LICENSE  README.md  meltano.yml  pyproject.toml  tap-fec-filings.py
.github/workflows/: test.yml
proof-of-concept/: README.md  parse-fec.py  requirements.txt  s3.py
tap_fec_filing/: __init__.py  client.py  streams.py  tap.py
tests/: __init__.py  test_core.py
