[tool.poetry]
name = "tap-fec-filing"
version = "0.0.1"
description = "`tap-fec-filing` is a Singer tap for fec-filing, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["David Riordan"]
keywords = [
    "ELT",
    "fec-filing",
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "<3.12,>=3.8"
singer-sdk = { version="^0.29.0" }
fs-s3fs = { version = "^1.1.1", optional = true }
fastfec = "^0.1.9"
s3fs = "^2023.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
singer-sdk = { version="^0.29.0", extras = ["testing"] }
ruff = "^0.0.289"
mypy = "^1.4.1"


[tool.mypy]
python_version = "3.9"
warn_unused_configs = true

[tool.ruff]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
]
select = ["ALL"]
src = ["tap_fec_filing"]
target-version = "py38"


[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.isort]
known-first-party = ["tap_fec_filing"]

[tool.ruff.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-fec-filing = 'tap_fec_filing.tap:Tap_fec_filing.cli'
